parsers/kubernetes/testdata/legacy.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: old-storefront
  namespace: shop
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: checkout
          servicePort: 80
