parsers/kubernetes/testdata/mixed-eras.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: storefront
  namespace: shop
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: checkout
          servicePort: 80
